--- a/src/components/LandingHeader.astro
+++ b/src/components/LandingHeader.astro
@@ -36,7 +36,8 @@ import Logo from "./Logo.astro";
       <div
         id="menu-backdrop"
         class="absolute bg-black/5 backdrop-blur-lg rounded 
-        left-[var(--left)] top-[var(--top)]
+        translate-x-[var(--left)] translate-y-[var(--top)]
+        left-0 top-0 
         w-[var(--width)] h-[var(--height)]
         transition-all duration-300
         ease-in-out opacity-0 -z-10"
@@ -49,7 +50,6 @@ import Logo from "./Logo.astro";
       listItem.forEach((item) =>{
         item.addEventListener("mouseenter", () => {
           const {left, top, width, height} = item.getBoundingClientRect()
-          const {clientHeight, clientWidth}=item
 
           menubackdrop.style.setProperty("--left", `${left}px`)
           menubackdrop.style.setProperty("--top", `${top}px`)
